--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!--Here's blast from the past with this hand rolled html+css :P-->
 <!DOCTYPE html>
     <head>
         <title>Hunter Werlla</title>
         <link rel="stylesheet" type="text/css" href="css/main.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
     </head>
     <body>
         <header id="site-header">
             <div align="center">
-                <h1>Hunter Werlla</h1>
+                <h1><span style="color: #37bbe4">Hunter</span> <span style="color: #404045">Werlla</span></h1>
                 <nav>
                     <a href="CV.pdf">CV</a>
                     <a href="mailto:hunter@werlla.com">Mail</a>
