Update resume and add an optimistic blog section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!--Here's blast from the past with this hand rolled html+css :P-->
 <!DOCTYPE html>
     <head>
         <title>Hunter Werlla</title>
         <link rel="stylesheet" type="text/css" href="css/main.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header id="site-header">
             <div align="center">
-                <h1><span style="color: #37bbe4">Hunter</span> <span style="color: #404045">Werlla</span></h1>
+                <h1><span style="color: #37bbe4">Hunter</span> Werlla</h1>
                 <nav>
+                    <a href="blog.html">Blog</a>
                     <a href="CV.pdf">CV</a>
                     <a href="mailto:hunter@werlla.com">Mail</a>
                     <a href="https://github.com/hunterwerlla">Github</a>
