Update website to new design

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
     <head>
         <title>Hunter Werlla</title>
         <link rel="stylesheet" type="text/css" href="css/main.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href="css/root.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
         <header id="site-header">
-            <div align="center">
+            <div align="left">
                 <h1><span style="color: #37bbe4">Hunter</span> Werlla</h1>
                 <nav>
                     <a href="blog.html">Blog</a>
