--- a/400.html
+++ b/400.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
     <head>
         <title>400</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href="css/common.css"/>
+        <link rel="stylesheet" type="text/css" href="css/error.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 align="center">400 Unauthorized</h1>
+        <h1 align="left"><span style="color: #37bbe4">400</span> Unauthorized</h1>
     </body>
 </html>
