--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
     <head>
         <title>Blog</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css"/>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href="css/common.css"/>
+        <link rel="stylesheet" type="text/css" href="css/blog.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header id="site-header">
-            <div align="center">
-                <h1><span style="color: #37bbe4">Blog</span></h1>
+        <div class="blog">
+            <div id="blog-header">
+                <h1><a href="index.html"><span style="color: #37bbe4">Blog</span></a></h1>
             </div>
-            <div align="center" id="posts">
+            <div id="posts" align="center">
                 <h3><a href="posts/1.html">How Many Log Levels Do You Need?</a></h3>
             </div>
-        </header>
+        </div>
     </body>
 </html>
