--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>Hunter Werlla</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css"/>
+        <link rel="stylesheet" type="text/css" href="css/common.css"/>
         <link rel="stylesheet" type="text/css" href="css/root.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
@@ -13,7 +13,7 @@
                     <a href="blog.html">Blog</a>
                     <a href="CV.pdf">CV</a>
                     <a href="mailto:hunter@werlla.com">Mail</a>
-                    <a href="https://github.com/hunterwerlla">Github</a>
+                    <a href="https://github.com/hunterwerlla">GitHub</a>
                     <a href="https://www.linkedin.com/in/hunterwerlla/">LinkedIn</a>
                 </nav>
             </div>
