--- a/404.html
+++ b/404.html
@@ -1,12 +1,13 @@
-    
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <title>404</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" href="css/common.css"/>
         <link rel="stylesheet" type="text/css" href="css/error.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 align="left"><span style="color: #37bbe4">404</span> Page Not Found</h1>
+        <h1 style="float: left;"><span style="color: #37bbe4">404</span> Page Not Found</h1>
     </body>
 </html>
