--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Blog</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" href="css/common.css"/>
         <link rel="stylesheet" type="text/css" href="css/blog.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
@@ -8,9 +10,9 @@
     <body>
         <div class="blog">
             <div id="blog-header">
-                <h1><a href="index.html"><span style="color: #37bbe4">Blog</span></a></h1>
+                <a href="index.html"><h1>Blog</h1></a>
             </div>
-            <div id="posts" align="center">
+            <div id="posts" style="text-align: center;">
                 <h3><a href="posts/1.html">How Many Log Levels Do You Need?</a></h3>
             </div>
         </div>
