--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Hunter Werlla</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" href="css/common.css"/>
-        <link rel="stylesheet" type="text/css" href="css/root.css"/>
+        <link rel="stylesheet" type="text/css" href="css/index.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     </head>
     <body>
         <header id="site-header">
-            <div align="left">
+            <div style="float: left;">
                 <h1><span style="color: #37bbe4">Hunter</span> Werlla</h1>
                 <nav>
-                    <a href="blog.html">Blog</a>
-                    <a href="CV.pdf">CV</a>
+                    <a onmouseover="background()" href="blog.html">Blog</a>
                     <a href="mailto:hunter@werlla.com">Mail</a>
                     <a href="https://github.com/hunterwerlla">GitHub</a>
                     <a href="https://www.linkedin.com/in/hunterwerlla/">LinkedIn</a>
