--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div style="float: left;">
                 <h1><span style="color: #37bbe4">Hunter</span> Werlla</h1>
                 <nav>
-                    <a onmouseover="background()" href="blog.html">Blog</a>
+                    <a href="blog.html">Blog</a>
                     <a href="mailto:hunter@werlla.com">Mail</a>
                     <a href="https://github.com/hunterwerlla">GitHub</a>
                     <a href="https://www.linkedin.com/in/hunterwerlla/">LinkedIn</a>
