--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@
             <div id="blog-header">
                 <a href="index.html"><h1>Blog</h1></a>
             </div>
-            <div id="posts" style="text-align: center;">
-                <h3><a href="posts/1.html">How Many Log Levels Do You Need?</a></h3>
+            <div id="blog" style="text-align: center;">
+                <h3><a href="blog/1.html">How Many Log Levels Do You Need?</a></h3>
             </div>
         </div>
     </body>
